--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <header>
         <img src="./imgs/Logo.svg" alt="Logo">
-        <div class="whiteBox">
+        <div class="whiteBox" id="white-box">
             <p id="text">QUESTION 1 OF 3:</p>
             <div class="circle-container">
                 <div id="circle1" class="circle"></div>
@@ -82,14 +82,22 @@
             ">
         </div>
         <div id="options-4" class="movies-container">
-            <img class="movie" src="./imgs/wakandaforever.jpg" alt="first image portrait" >
-            <img class="movie" src="./imgs/godfather.jpg" alt="first image portrait" >
-            <img class="movie" src="./imgs/purplehearts.jpg" alt="first image portrait" >
+            <img class="movie" src="./imgs/wakandaforever.jpg" alt="first image portrait">
+            <img class="movie" src="./imgs/godfather.jpg" alt="first image portrait">
+            <img class="movie" src="./imgs/purplehearts.jpg" alt="first image portrait">
         </div>
         <div id="options-5" class="movies-container">
-            <img class="movie" src="./imgs/infinity.jpg" alt="first image portrait" >
-            <img class="movie" src="./imgs/pacific.jpg" alt="first image portrait" >
-            <img class="movie" src="./imgs/deadwol.jpg" alt="first image portrait" >
+            <img class="movie" src="./imgs/infinity.jpg" alt="first image portrait">
+            <img class="movie" src="./imgs/pacific.jpg" alt="first image portrait">
+            <img class="movie" src="./imgs/deadwol.jpg" alt="first image portrait">
+        </div>
+        <div id="modal" class="modal">
+            <h2>Watch new movies for free!</h2>
+            <p>Watch any movies online for free without ads!</p>
+            <p>Have fun watching your favourite movies!</p>
+            <a href="#" target="_blank" id="modal-button">
+                WATCH HERE!
+            </a>
         </div>
     </div>
     <footer>
